# fix-mcp-server

./: .build-status.md  .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  Dockerfile.console  LICENSE  README.md  docker-compose.yml  experiment_results.json  frontend.html  next.config.ts  package-lock.json  package.json  program.md  pyproject.toml  react_debug.html  serve.py  test_debug.html  test_minimal.html
.claude/: instructions.md  mcp.json
.github/ISSUE_TEMPLATE/: live-demo-deployment.md  roadmap-to-v02.md
.github/workflows/: ci.yml  release.yml
config/: alert_patterns.yaml  clients.json  reference_data.json  venues.json
config/scenarios/: afterhours_dark_1630.json  bats_startup_0200.json  eod_moc_1530.json  iex_recovery_1400.json  is_dark_failure_1415.json  midday_chaos_1205.json  morning_triage.json  predawn_adrs_0430.json  (+6 more)
demo/: README.md  package-lock.json  package.json  tsconfig.json
docs/: ai_operations_theater.md  algo-suite.md  architecture.md  checkpoint.md  demo-midday-chaos.md  launch-package.md  operator-demo-flow.md  production.md  prompts.md  release-checklist.md  remotion-executive-demos.md  review-workflow.md  scenario_schema.md  scenarios.md  tools.md
scripts/: capture_demo_run.py  check_release_ready.sh  demo_workflow.py  init_db.sql  run_experiment.py  start.sh
sql/: 001_audit_schema.sql
tests/: test_algos.py  test_autonomous.py  test_fix_messages.py  test_fix_sessions.py  test_market_data.py  test_midday_chaos_e2e.py  test_oms.py  test_scenario_loader.py  test_scenario_midday_chaos.py  test_server.py
(+89 files in other folders)
